--- a/src/App.scss
+++ b/src/App.scss
@@ -1,77 +1,86 @@
-*{
-    margin: 0%;
-    padding: 0%;
+* {
+  margin: 0%;
+  padding: 0%;
 
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-    &::-webkit-scrollbar{
-        display:none
-    }
-    
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-a,h2{
-    color: white
+a,
+h2 {
+  color: white;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 
-.header{
+.header {
+  height: 100px;
+  background-color: black;
 
-    height: 100px;
-    background-color: black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
 
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    display: flex;
-    
-     padding: 1rem;
-     box-sizing: border-box;
+  padding: 1rem;
+  box-sizing: border-box;
+
+  > img {
+    height: 60%;
+  }
+
+  > div {
+    // border: 2px solid red;
+    width: 100%;
+    // margin-left: 3vmax;
+    // display: flex;
+    // justify-content: space-around;
+
+    > a {
+      margin: 1vmax;
+      font-size: 1rem;
+    }
+
+    &:hover {
+      color: rgb(237, 124, 124);
+    }
+  }
+
+  > svg {
+    color: rgb(251, 251, 251);
+    font-size: 2rem;
+    cursor: pointer;
+
+    &:hover {
+      color: rgb(237, 124, 124);
+    }
+  }
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 768px)
+ {
+
+   .header{
+   display: block;
+   margin: auto;
+
+  
+   }
+
+   a{
+      margin: 10vmax;
+      font-size: 1rem;
+    }
+
 
 
    
-    >img{
-
-        height: 70%;
-    
-
-    
-    }
-
-    >div{
-        // border: 2px solid red;
-        width: 100%;
-        margin-left: 3vmax;
-        // display: flex;
-        // justify-content: space-around;
-
-        >a{
-             margin:1vmax;
-             font-size: 1.2rem;
-        }
-
-
-    }
-
-     >svg{
-         color: rgb(251, 251, 251);
-         font-size: 2rem;
-        cursor: pointer;
-
-        &:hover{
-            color: rgb(237, 124, 124);
-        }
-     }
-
-     
-}
-
-a{
-    color: white;
-    text-decoration: none;
-}
-
-
-
-
+ }
