--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -1,123 +1,161 @@
 $bg: rgb(16, 16, 16);
 
 .banner {
-    height: 600px;
-    background-color: black;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-     padding: 2rem;
-    box-sizing: border-box;
-  
-    &::after {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      background: $bg;
-      opacity: 0.4;
-    }
-  
-    h1,
-    p {
-      color: white;
-      font-size: 3rem;
-      width: 40%;
-      z-index: 10;
-    }
-    p {
-      font-size: 1.2rem;
-      letter-spacing: 2px;
-      word-spacing: 3px;
-      font-weight: 100;
-    }
-  
-    > div {
-      display: flex;
-  
-      button {
-        padding: 1rem;
-        width: 150px;
-        outline: none;
-        border: none;
-        z-index: 10;
-        border-radius: 5px;
-        margin: 1rem;
-        cursor: pointer;
-        font-size: 1.2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: all 0.5s;
-        &:hover {
-          opacity: 0.6;
-        }
-  
-        &:nth-child(odd) {
-          background-color: white;
-          color: black;
-        }
-        &:nth-child(even) {
-          background-color: rgb(57, 57, 57);
-          color: rgb(255, 255, 255);
-        }
-        svg {
-          font-size: 1.7rem;
-          margin: 0 10px;
-        }
-      }
-    }
+  height: 700px;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 2rem;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+
+  // &::after {
+  //   content: '';
+  //   width: 100%;
+  //   height: 100%;
+  //   position: absolute;
+  //   top: 0%;
+  //   left: 0%;
+  //   background: $bg;
+  //   opacity: 0.4;
+  // }
+
+  h1,
+  p {
+    color: white;
+    font-size: 3rem;
+    width: 40%;
+    // z-index: 10;
+  }
+  p {
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+    font-weight: 100;
   }
 
-.row{   
-    padding: 1rem;
-    background-color: black;
-    >h2{
-        font-weight: 400;
-        margin: 0.3rem;
-    }
-    >div{
-        display: flex;
-        overflow-x: auto;
-    }
-}
+ @media (max-width: 768px)
+ {
 
-.card
-{
-    width: 200px;
-    margin: 0.3rem;
-    cursor: pointer;
-    transition: transform 0.5s;
-    &:hover{
-        transform:translate(10px) scale(1.05)
-    }
-}
 
-.genreBox {
-    overflow-x: auto;
+ p{
+   color: white;
+    font-size: 1rem;
+    width: 100%;
+    }
+ }
+
+  > div {
     display: flex;
-    height: 100px;
-    background-color: black;
-    flex: 0%;
-    > a {
-      color: black;
-      background-color: white;
-      padding: 1rem 0;
-      text-align: center;
+
+    button {
+      padding: 1rem;
+      width: 150px;
+      outline: none;
+      border: none;
+      z-index: 10;
       border-radius: 5px;
-      transition: all 0.5s;
-      min-width: 10rem;
+      margin: 1rem;
+      cursor: pointer;
+      font-size: 1.2rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 1rem;
+      transition: all 0.5s;
       &:hover {
-        background-color: rgb(236, 236, 236);
+        opacity: 0.6;
+      }
+
+      &:nth-child(odd) {
+        background-color: white;
+        color: black;
+      }
+      &:nth-child(even) {
+        background-color: rgb(57, 57, 57);
+        color: rgb(255, 255, 255);
+      }
+      svg {
+        font-size: 1.7rem;
+        margin: 0 10px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      div {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      button {
+        width: 100%; /* Take up full width of the container */
+        font-size: 1rem; /* Adjust font size for smaller screens */
+        margin: 0.5rem 0; /* Reduce margin for compact spacing */
       }
     }
   }
+}
+
+.row {
+  padding: 1rem;
+  background-color: black;
+  > h2 {
+    font-weight: 400;
+    margin: 0.3rem;
+  }
+  > div {
+    display: flex;
+    overflow-x: auto;
+  }
+}
+
+.card {
+  width: 200px;
+  margin: 0.3rem;
+  cursor: pointer;
+  transition: transform 0.5s;
+  &:hover {
+    transform: translate(10px) scale(1.05);
+  }
+}
+
+.genreBox {
+  overflow-x: auto;
+  display: flex;
+  height: 100px;
+  background-color: black;
+  flex: 0%;
+  > a {
+    color: black;
+    background-color: white;
+    padding: 1rem 0;
+    text-align: center;
+    border-radius: 5px;
+    transition: all 0.5s;
+    min-width: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    &:hover {
+      background-color: rgb(236, 236, 236);
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    height: auto; /* Adjust the height as needed */
+    padding: 1rem; /* Adjust the padding as needed */
+  }
+
+  button {
+    width: 100%; /* Take full width of container */
+    font-size: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+  }
+}
